--- a/index.html
+++ b/index.html
@@ -3,29 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>grid</title>
+    <title>SublimeStyle</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="layout">
         <header class="header">
-            <h1>proyecto</h1>
+            <h1><a href="#SublimeStyle">SublimeStyle</a></h1>
             <nav>
                 <ul>
-                    <li>item1</li>
-                    <li>item2</li>
-                    <li>item3</li>
+                    <li><a href="#Estampado">Estampado</a></li>
+                    <li><a href="#Sublimacion">Sublimacion</a></li>
+                    <li><a href="#Vinilos">Vinilos</a></li>
                 </ul>
             </nav>
         </header>
-        <aside class="aside">aside</aside>
+        <aside class="aside">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo quos commodi dolorum ipsum, sed facere libero mollitia distinctio possimus est optio qui quasi sint neque ad necessitatibus! Iste, maxilorem ipsum</aside>
 
-        <section class="section1">section 1</section>
-        <section class="section2">section 2</section>
-        <section class="section3">section 3</section>
+        <section class="section1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ea corporis maxime suscipit sunt molestiae deleniti voluptatem quisquam praesentium, quasi ratione impedit rem quam assumenda quo! Animi mollitia possimus voluptatibus!</section>
+        <section class="section2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, obcaecati praesentium doloribus soluta iure nam tempora, facere perspiciatis dignissimos distinctio repellat ipsum mollitia. Minima odit suscipit quibusdam ratione tempore doloribus.</section>
+        <section class="section3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius quis magni et dignissimos tempora ipsam, labore obcaecati totam voluptatibus quos ullam rem rerum in soluta consectetur non ut placeat debitis!</section>
 
-        <footer class="footer">footer</footer>
-    </div>
+        <footer class="footer">
+            <div>
+                <nav>
+                    <ul class="redes">
+                        <ol><a href="Instagram">Instagram</a></ol>
+                        <ol><a href="Twitter">Twitter</a></ol>
+                        <ol><a href="Youtube">Youtube</a></ol>
+                        <ol><a href="Whatsapp">Whatsapp</a></ol>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
     
 </body>
 </html>
